test/_migrate/pass/primitive_default_ctor.rill
def main()
{
    val a = int32();
}