test/_migrate/fail_compilation/lifetime_ref_cannot_return_local_ptr.rill
def main() {
    f();
}

def f() {
    return address_of(100);
}
